--- a/travis.yml
+++ b/travis.yml
@@ -1,4 +1,5 @@
 language: objective-c
 xcode_project: BasicCoreData.xcodeproj 
 xcode_scheme: BasicCoreData
-iphonesimulator8.0
+xcode_sdk:iphonesimulator8.0
+
